<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pong</string>
    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="player_score">Score: </string>
    <string name="opponent_score">Opponent: </string>
    <string name="time">TIME: </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="defaultValue">Easy</string>
    <string name="title_activity_difficulty_level">DifficultyLevel</string>
    <string name="title_activity_easy">Easy</string>
    <string name="title_activity_medium">Medium</string>
    <string name="title_activity_hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_post_game">PostGameActivity</string>

</resources>
