<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context="com.hadenw.pong.Easy">

	<TextView
			android:text="@string/player_score"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	<TextView
			android:text="@string/time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	<TextView
			android:text="@string/opponent_score"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	<com.hadenw.pong.GameView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"/>
</RelativeLayout>