<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:background="#ff000000"
			 tools:context=".FullscreenActivity">

	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
				 xmlns:tools="http://schemas.android.com/tools"
				 tools:context="com.hadenw.pong.MenuAnimationView"
				 android:layout_width="match_parent"
				 android:layout_height="match_parent">

		<com.hadenw.pong.MenuAnimationView
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>
	</FrameLayout>

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center">

		<Button
				android:id="@+id/button_easy"
				android:textSize="24sp"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/easy"
				android:background="#ff7dffff"
				android:clickable="true"/>

		<Button
				android:id="@+id/button_medium"
				android:textSize="24sp"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/medium"
				android:background="#ff7eff50"
				android:clickable="true"/>

		<Button
				android:id="@+id/button_hard"
				android:textSize="24sp"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/hard"
				android:background="#ffafafaf"
				android:clickable="true"/>
	</LinearLayout>
</FrameLayout>